# segmented-conformal-transport

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup_and_test.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/workflows/: ci.yml  codeql.yml  release.yml
analysis/: generate_paper_artifacts.py
benchmarks/: README.md  baselines.py  cache_fm_forecasts.py  data_loaders.py  run_real_data.py  run_synthetic.py
benchmarks/synthetic/: dgp.py
configs/: manuscript_claimed_settings.json  real_data_actual_settings.json  synthetic_actual_settings.json
data/: README.md  benchmark_results.json
docs/: api_reference.md  cache_step_cli.md  index.md  minimal_api_appendix.tex  quickstart.md  theory_alignment.md  warnings_and_failures.md  when_not_to_use.md
docs/tutorials/: tutorial_01_synthetic.md  tutorial_02_chronos.md  tutorial_03_rolling_eval.md
reproducibility/: colab_workflow.md  paper_alignment.md  run_postcache_reproduction.sh  tsconformal_benchmark_colab.ipynb
scripts/: check_release_version.py
src/tsconformal/: __init__.py  _benchmark_defaults.py  api.py  calibrators.py  detectors.py  diagnostics.py  forecast.py  metrics.py  plots.py  sensitivity.py  serialization.py  utils.py
src/tsconformal/examples/: chronos_wrapper_example.py  rolling_evaluation.py  synthetic_piecewise_stationary.py
tests/fixtures/state_schema_0_1_0/: meta.json
tests/integration/: test_appendix_d_workflow.py
tests/property/: test_hypothesis.py  test_properties.py
tests/regression/: test_calibrator_snapshot.py  test_diagnostics_occupancy.py  test_discrete_quantile_forecasts.py  test_paper_artifact_generation.py  test_real_data_outputs.py  test_release_version.py  test_state_schema_compatibility.py  test_synthetic_benchmark.py  test_synthetic_snapshot.py
