[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsconformal"
version = "0.2.0rc2"
description = "Segmented Conformal Transport for predictive CDF recalibration under nonstationarity"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.13"
authors = [
    {name = "Dara Dehghan"},
]
maintainers = [
    {name = "Dara Dehghan"},
]
keywords = [
    "conformal prediction",
    "time series",
    "calibration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "typing_extensions>=4.5",
]

[project.urls]
Homepage = "https://github.com/daradehghan/segmented-conformal-transport"
Repository = "https://github.com/daradehghan/segmented-conformal-transport"
Issues = "https://github.com/daradehghan/segmented-conformal-transport/issues"
Documentation = "https://github.com/daradehghan/segmented-conformal-transport/tree/main/docs"

[project.optional-dependencies]
plots = ["matplotlib>=3.7", "statsmodels>=0.14"]
detectors = ["ruptures>=1.1"]
fm = [
    "chronos-forecasting>=2.0",
    "torch>=2.0",
    "transformers>=4.30",
]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.80",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "ruff>=0.1",
    "build>=1.2",
    "twine>=5",
    "packaging>=23",
    "PyYAML>=6",
]

[tool.setuptools.packages.find]
where = ["src"]
